<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="toussaint.projet_android.MainApp">

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_perso"
        android:textSize="25dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textViewConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compte_connection"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="15dp"
        android:layout_below="@id/textViewInfo"/>

    <TextView
        android:id="@+id/textViewConnectionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewInfo"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@id/textViewConnection"
        android:textColor="#FF0000"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/textViewNbPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewConnection"
        android:text="@string/info_perso_points"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/textViewPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textSize="15dp"
        android:layout_alignBaseline="@+id/textViewNbPoints"
        android:layout_alignBottom="@+id/textViewNbPoints"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textViewParrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textViewNbPoints"
        android:text="@string/info_perso_parrain"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textSize="15dp"
        android:layout_alignBaseline="@+id/textViewParrain"
        android:layout_alignBottom="@+id/textViewParrain"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textViewSolde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_solde"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/textViewParrain" />

    <TextView
        android:id="@+id/textSolde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textSize="15dp"
        android:layout_alignBaseline="@+id/textViewSolde"
        android:layout_alignBottom="@+id/textViewSolde"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/buttonDeconnction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_deco"
        android:layout_below="@+id/textViewSolde"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#FF909090"
        android:id="@+id/view3"
        android:layout_below="@id/buttonDeconnction"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compte_param_textView"
        android:textSize="25dp"
        android:layout_below="@+id/view3"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/textView2"
        android:layout_marginStart="50dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/checkBox" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compte_param_notif"
        android:layout_alignBaseline="@+id/checkBox"
        android:layout_alignBottom="@+id/checkBox"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_mode_nuit"
        android:textSize="15dp"
        android:layout_alignBaseline="@+id/switch1"
        android:layout_alignBottom="@+id/switch1"
        android:layout_alignStart="@+id/textView2" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#FF909090"
        android:layout_below="@id/switch1"
        android:id="@+id/view"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/buttonParrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_perso_parrain_button"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonInvite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_ami"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/buttonParrain"
        android:layout_centerHorizontal="true" />

</RelativeLayout>